--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -1,15 +1,15 @@
-#代码生成器，配置信息
+#\u4EE3\u7801\u751F\u6210\u5668\uFF0C\u914D\u7F6E\u4FE1\u606F
 mainPath=com.stone
-#包名
+#\u5305\u540D
 package=com.stone.blog
-moduleName=entity
-#作者
+moduleName=
+#\u4F5C\u8005
 author=stone
 #Email
 email=330079598@qq.com
-#表前缀(类名不会包含表前缀)
+#\u8868\u524D\u7F00(\u7C7B\u540D\u4E0D\u4F1A\u5305\u542B\u8868\u524D\u7F00)
 tablePrefix=t_
-#类型转换，配置信息
+#\u7C7B\u578B\u8F6C\u6362\uFF0C\u914D\u7F6E\u4FE1\u606F
 tinyint=Integer
 smallint=Integer
 mediumint=Integer
@@ -20,19 +20,15 @@ float=Float
 double=Double
 decimal=BigDecimal
 bit=Boolean
-
 char=String
 varchar=String
 tinytext=String
 text=String
 mediumtext=String
 longtext=String
-
-
 date=Date
 datetime=Date
 timestamp=Date
-
 NUMBER=Integer
 INT=Integer
 INTEGER=Integer
@@ -54,10 +50,8 @@ DATE=Date
 DATETIME=Date
 TIMESTAMP=Date
 TIMESTAMP(6)=Date
-
 int8=Long
 int4=Integer
 int2=Integer
 numeric=BigDecimal
-
 nvarchar=String
